Refactor factors and projects

--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "streammyevent-pricinglib",
   "module": "index.ts",
   "type": "module",
+  "private": true,
+  "scripts": {
+    "test": "bun test"
+  },
   "devDependencies": {
     "@types/bun": "latest"
   },
